check in: nfc, check out: qr