@@ -5,9 +5,13 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
+import java.net.URI;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
+import java.util.LinkedHashSet;
+import java.util.List;
 import java.util.Map;
 
 import com.google.gson.Gson;
@@ -19,42 +23,115 @@ import com.google.gson.Gson;
  */
 public final class FirebaseFunctionsClient {
     private static final Gson gson = new Gson();
+    private static final String REGION = "asia-southeast1";
 
     private FirebaseFunctionsClient() {}
 
     public static CallResult callClaimTeacherRole(String projectId, String idToken) throws IOException {
-        String url = "https://asia-southeast1-" + projectId + ".cloudfunctions.net/claimTeacherRole";
-        return callCallable(url, idToken, "{}");
+        return callCallableByName(projectId, idToken, "claimTeacherRole", "{}");
     }
 
     public static CallResult callBillingGetHealth(String projectId, String idToken) throws IOException {
-        String url = "https://asia-southeast1-" + projectId + ".cloudfunctions.net/billingGetHealth";
-        return callCallable(url, idToken, "{}");
+        return callCallableByName(projectId, idToken, "billingGetHealth", "{}");
     }
 
     public static CallResult callBillingAdminListCatalogs(String projectId, String idToken) throws IOException {
-        String url = "https://asia-southeast1-" + projectId + ".cloudfunctions.net/billingAdminListCatalogs";
-        return callCallable(url, idToken, "{}");
+        return callCallableByName(projectId, idToken, "billingAdminListCatalogs", "{}");
     }
 
     public static CallResult callBillingAdminSaveCatalog(String projectId, String idToken, String dataJsonObject) throws IOException {
-        String url = "https://asia-southeast1-" + projectId + ".cloudfunctions.net/billingAdminSaveCatalog";
-        return callCallable(url, idToken, dataJsonObject);
+        return callCallableByName(projectId, idToken, "billingAdminSaveCatalog", dataJsonObject);
     }
 
     public static CallResult callBillingAdminActivateCatalog(String projectId, String idToken, String dataJsonObject) throws IOException {
-        String url = "https://asia-southeast1-" + projectId + ".cloudfunctions.net/billingAdminActivateCatalog";
-        return callCallable(url, idToken, dataJsonObject);
+        return callCallableByName(projectId, idToken, "billingAdminActivateCatalog", dataJsonObject);
     }
 
     public static CallResult callBillingAdminListAudit(String projectId, String idToken, String dataJsonObject) throws IOException {
-        String url = "https://asia-southeast1-" + projectId + ".cloudfunctions.net/billingAdminListAudit";
-        return callCallable(url, idToken, dataJsonObject);
+        return callCallableByName(projectId, idToken, "billingAdminListAudit", dataJsonObject);
     }
 
     public static CallResult callBillingAdminGenerateInvoicesForPeriod(String projectId, String idToken, String dataJsonObject) throws IOException {
-        String url = "https://asia-southeast1-" + projectId + ".cloudfunctions.net/billingAdminGenerateInvoicesForPeriod";
-        return callCallable(url, idToken, dataJsonObject);
+        return callCallableByName(projectId, idToken, "billingAdminGenerateInvoicesForPeriod", dataJsonObject);
+    }
+
+    public static CallResult callAttendanceNfcCheckIn(String projectId, String idToken, String dataJsonObject) throws IOException {
+        return callCallableByName(projectId, idToken, "attendanceNfcCheckIn", dataJsonObject);
+    }
+
+    public static CallResult callAttendanceCheckoutWithParentQr(String projectId, String idToken, String dataJsonObject) throws IOException {
+        return callCallableByName(projectId, idToken, "attendanceCheckoutWithParentQr", dataJsonObject);
+    }
+
+    public static CallResult callAttendanceAdminOverride(String projectId, String idToken, String dataJsonObject) throws IOException {
+        return callCallableByName(projectId, idToken, "attendanceAdminOverride", dataJsonObject);
+    }
+
+    public static CallResult callCasualTransitCreateVisit(String projectId, String idToken, String dataJsonObject) throws IOException {
+        return callCallableByName(projectId, idToken, "casualTransitCreateVisit", dataJsonObject);
+    }
+
+    public static CallResult callCasualTransitCheckoutVisit(String projectId, String idToken, String dataJsonObject) throws IOException {
+        return callCallableByName(projectId, idToken, "casualTransitCheckoutVisit", dataJsonObject);
+    }
+
+    public static CallResult callCasualTransitAdminOverride(String projectId, String idToken, String dataJsonObject) throws IOException {
+        return callCallableByName(projectId, idToken, "casualTransitAdminOverride", dataJsonObject);
+    }
+
+    private static CallResult callCallableByName(String projectId, String idToken, String functionName, String dataJsonObject) throws IOException {
+        List<String> candidateProjectIds = candidateProjectIds(projectId, idToken);
+        CallResult last404 = null;
+
+        for (String candidateProjectId : candidateProjectIds) {
+            String endpoint = callableEndpoint(candidateProjectId, functionName);
+            CallResult result = callCallable(endpoint, idToken, dataJsonObject);
+            if (!"http-404".equals(result.reason)) {
+                return result;
+            }
+            last404 = result;
+        }
+
+        if (last404 != null) {
+            return new CallResult(
+                false,
+                "http-404",
+                "Callable endpoint not found after trying projects " + candidateProjectIds + ". Last response: " + last404.rawBody
+            );
+        }
+
+        return new CallResult(false, "http-404", "Callable endpoint not found.");
+    }
+
+    private static List<String> candidateProjectIds(String explicitProjectId, String idToken) {
+        LinkedHashSet<String> ids = new LinkedHashSet<>();
+        addProjectId(ids, explicitProjectId);
+        addProjectId(ids, FirebaseConfig.readPropertyFromJarFiles("firebase.properties", "projectId"));
+        addProjectId(ids, JwtUtils.extractStringClaim(idToken, "aud"));
+
+        String issuer = JwtUtils.extractStringClaim(idToken, "iss");
+        if (issuer != null && !issuer.isBlank()) {
+            int idx = issuer.lastIndexOf('/');
+            if (idx >= 0 && idx + 1 < issuer.length()) {
+                addProjectId(ids, issuer.substring(idx + 1));
+            }
+        }
+
+        return new ArrayList<>(ids);
+    }
+
+    private static void addProjectId(LinkedHashSet<String> ids, String projectId) {
+        if (projectId == null) {
+            return;
+        }
+        String normalized = projectId.trim();
+        if (!normalized.isBlank()) {
+            ids.add(normalized);
+        }
+    }
+
+    private static String callableEndpoint(String projectId, String functionName) {
+        return "https://" + REGION + "-" + projectId + ".cloudfunctions.net/" + functionName;
     }
 
     private static CallResult callCallable(String endpoint, String idToken, String dataJsonObject) throws IOException {
@@ -62,7 +139,7 @@ public final class FirebaseFunctionsClient {
             throw new IllegalArgumentException("Missing idToken");
         }
 
-        URL url = new URL(endpoint);
+        URL url = URI.create(endpoint).toURL();
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.setRequestMethod("POST");
         conn.setDoOutput(true);
@@ -92,6 +169,9 @@ public final class FirebaseFunctionsClient {
                 // Some environments may return the result map at top-level.
                 resObj = m;
             }
+            if (!(resObj instanceof Map)) {
+                return new CallResult(true, null, body);
+            }
             @SuppressWarnings("unchecked")
             Map<Object, Object> res = (Map<Object, Object>) resObj;
 
@@ -99,7 +179,7 @@ public final class FirebaseFunctionsClient {
             boolean okBool = (ok instanceof Boolean) ? (Boolean) ok : false;
             String reason = res.get("reason") == null ? null : String.valueOf(res.get("reason"));
             return new CallResult(okBool, reason, body);
-        } catch (Exception ignored) {
+        } catch (ClassCastException | IllegalStateException ignored) {
             // If parsing fails, treat 200 as success but return raw body.
             return new CallResult(true, null, body);
         }
